# mist

./: .gitignore  .ocamlformat  dune  dune-project  index.html  mist.opam  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.mjs  webpack.config.js
client/: ReactApp.mlx  ReactApp.re  dune  fog.ml  home_page.ml  menu.ml  post.ml  route.ml
client/components/: app.re  article.re  dune  landing.re  menuBar.re  page.re
client/js/: main.js  parseHtml.js  styles.css
client/lib/: dune  lucide.re  psexp.re
client/pages/: article.re  article.rei  dune  index.re  index.rei  landing.re  landing.rei
client/shadcn/: dune  shadcn.re
client/shadcn/components/: input.tsx
client/shadcn/components/button/: button.tsx
client/utils/: dune  fetch.re  fetch.rei  parseHtml.re  route.re  shadbindings.re
dummy-fs/: foo
lib/: dune  files.ml  files.mli  mist.ml  page.ml
lib/domPpx/: dune  ppx_dom_props.ml
public/: splash.txt
server/: dune  files.ml  files.mli  mist.ml
static/: styles.css
test/: dune
test-dir/dir1/: bar  baz
